Ajuste em app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
-    <a [routerLink] = "['/Client']" > cliente </a>
+    <a [routerLink] = "['/client']" > cliente </a>
   </h1>
   
 
