Estrutura do Forms criada - HTML/CSS

--- a/src/app/client/client-register/client-register.component.html
+++ b/src/app/client/client-register/client-register.component.html
@@ -1,1 +1,38 @@
-<p>client-register works!</p>
+<h1>Novo Cliente</h1>
+    <form>
+        <div class="container">
+            <label for="user_name">Name</label><br>
+            <input type = text id="nome" placeholder="Nome Completo" style="text-align:center"><br></div>
+
+        <div class="container">
+            <label for="user_rg">RG</label><br>
+            <input id="rg" placeholder="RG" style="text-align:center"></div>
+        
+        <div class="container">
+            <label for="user_orgao">Orgão Exp.</label><br>
+            <input id="orgao" placeholder="Orgão Exp." style="text-align:center" ><br></div>
+        <div class="container">
+            <label for="user_cpf">CPF ou CNPJ</label><br>
+            <input id="cpf" placeholder="CPF ou CNPJ" style="text-align:center"><br></div>
+        <div class="container">
+            <label for="user_telefone">Telefone</label><br>
+            <input id="telefone" placeholder="Telefone" style="text-align:center"><br></div>
+        <div class="container">
+            <label for="usesr_email">Email</label><br>
+            <input id="email" placeholder="Email" style="text-align:center"><br></div>
+        
+        <div class="container">
+            <label for="user_job">Profissão</label><br>
+            <input id="profissao" placeholder="Profissão" style="text-align:center"><br></div>
+        
+        <div class="container">
+            <label for="user_adress">Endereço</label><br>
+            <input id="endereco" placeholder="Endereço" style="text-align:center"><br></div>
+        <div class="container">
+            <label for="user_type">Tipo de Cliente</label><br>
+            <input id="cliente" placeholder="Tipo de cliente" style="text-align:center" ><br></div>  
+        <button>Cadastro</button>
+
+    </form> 
+
+
