edit-client.component.html funcionando

--- a/src/app/client/edit-client/edit-client.component.html
+++ b/src/app/client/edit-client/edit-client.component.html
@@ -1,43 +1,44 @@
 <div class="container">
 <h1> Editando Cliente </h1>
 
-<form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
+<form [formGroup]="cliente" (ngSubmit)="onSubmit(cliente.value)">
     <div>
-        <label for="client_name">Nome</label>
-        <input type="text" id="client_name" name="name" [ngModel]="client.name">
+        <label for="client_name">Nome</label> <br>
+        <input type="text" id="client_name" name="name" formControlName="name">
     </div>
     <div>
-        <label for="client_cpf">CPF</label>
-        <input type="text" id="client_CPF" name="CPF" [ngModel]="client.CPF">
+        <label for="client_cpf">CPF</label> <br>
+        <input type="text" id="client_CPF" name="CPF" formControlName="cpf">
     </div>
     <div>
-        <label for="client_date">Data de Nascimento</label>
-        <input type="date" id="client_date" name="date" [ngModel]="client.dateOfBirth">
+        <label for="client_date">Data de Nascimento</label> <br>
+        <input type="date" id="client_date" name="date" formControlName="dateOfBirth">
     </div>
     <div>
-        <label for="client_profession">Profissão</label> 
-        <input type="text" id="client_profession" name="profession" [ngModel]="client.profession"> 
+        <label for="client_profession">Profissão</label> <br>
+        <input type="text" id="client_profession" name="profession" formControlName="profession"> 
     </div>
     <div>
-        <label for="client_RG">RG</label> 
-        <input type="text" id="client_RG" name="rg" [ngModel]="client.RG"> 
+        <label for="client_RG">RG</label> <br>
+        <input type="text" id="client_RG" name="rg" formControlName="rg"> 
     </div>
     <div>
-        <label for="client_address">Endereço</label> 
-        <input type="text" id="client_address" name="address" [ngModel]="client.address"> 
+        <label for="client_address">Endereço</label> <br>
+        <input type="text" id="client_address" name="address" formControlName="address"> 
     </div>
     <div>
-        <label for="client_email">E-mail</label> 
-        <input type="text" id="client_email" name="email" [ngModel]="client.email"> 
+        <label for="client_email">E-mail</label> <br>
+        <input type="text" id="client_email" name="email" formControlName="email"> 
     </div><div>
-        <label for="client_telephone">Telefone</label> 
-        <input type="text" id="client_telephone" name="telephone" [ngModel]="client.telephone">
+        <label for="client_telephone">Telefone</label> <br>
+        <input type="text" id="client_telephone" name="telephone" formControlName="telephone">
     </div>
     
     <input type="submit" id="edit_client_button" value="Editar Cliente">
 </form>
 
+</div>
+
+
 <a href="#" (click)="show()">Show</a>
 <a href="#" (click)="back()">Back</a>
-
-</div>
