--- a/src/app/client/list-client/list-client.component.html
+++ b/src/app/client/list-client/list-client.component.html
@@ -21,4 +21,4 @@
     </tbody>
   </table>
   
-  <a [routerLink]="['/clients', 'new']">New Client</a>
+  <a [routerLink]="['/client', 'new']">New Client</a>
