criaçao da pasta show-client e transferencia dos arquivos client.component para tal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to {{ title }}!<br>
     <div>
-      <a [routerLink] = "['/client']" > cliente </a>
+      <a [routerLink] = "['/client', 'list']" > clientes </a>
 
     </div>
   </h1>
