address tornou-se um objeto

--- a/src/app/client/edit-client/edit-client.component.html
+++ b/src/app/client/edit-client/edit-client.component.html
@@ -3,37 +3,51 @@
 
 <form [formGroup]="cliente" (ngSubmit)="onSubmit(cliente.value)">
     <div class="campo">
-        <label for="client_name">Nome</label> <br>
+        <label for="client_name">Nome: </label> <br>
         <input type="text" id="client_name" name="name" formControlName="name">
     </div>
     <div class="campo">
-        <label for="client_cpf">CPF</label> <br>
+        <label for="client_cpf">CPF: </label> <br>
         <input type="text" id="client_CPF" name="CPF" formControlName="cpf">
     </div>
     <div class="campo">
-        <label for="client_date">Data de Nascimento</label> <br>
+        <label for="client_date">Data de Nascimento: </label> <br>
         <input type="date" id="client_date" name="date" formControlName="dateOfBirth">
     </div>
     <div class="campo">
-        <label for="client_profession">Profissão</label> <br>
+        <label for="client_profession">Profissão: </label> <br>
         <input type="text" id="client_profession" name="profession" formControlName="profession"> 
     </div>
     <div class="campo">
-        <label for="client_RG">RG</label> <br>
+        <label for="client_RG">RG: </label> <br>
         <input type="text" id="client_RG" name="rg" formControlName="rg"> 
     </div>
     <div class="campo">
-        <label for="client_address">Endereço</label> <br>
-        <input type="text" id="client_address" name="address" formControlName="address"> 
+        <label for="client_address">Endereço </label> <br>
+        <label for="client_address">Rua: </label> <br>
+        <input type="text" id="client_address" name="address" formControlName="address"> <br>
+        <label for="client_address"> Numero: </label> <br>
+        <input type="text" id="client_address" name="address" formControlName="address"> <br>
+        <label for="client_address"> Bairro: </label> <br>
+        <input type="text" id="client_address" name="address" formControlName="address"> <br>
     </div>
     <div class="campo">
-        <label for="client_email">E-mail</label> <br>
+        <label for="client_email">E-mail: </label> <br>
         <input type="text" id="client_email" name="email" formControlName="email"> 
     </div>
     <div class="campo">
-        <label for="client_telephone">Telefone</label> <br>
+        <label for="client_telephone">Telefone: </label> <br>
         <input type="text" id="client_telephone" name="telephone" formControlName="telephone">
     </div>
+    <div class="campo">
+        <label for="client_type"> Tipo do Cliente: </label>
+        <select id="client_type" formControlName="type">
+            <option>Pessoa Física</option>
+            <option> Pessoa Jurídica</option>
+        </select>
+    </div>
+    <br>
+    
     
     <input type="submit" id="edit_client_button" value="Editar Cliente">
 </form>
