--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!<br>
-    <div>
-      <a [routerLink] = "['/client', 'list']" > clientes </a>
-
-    </div>
-  </h1>
-
-  
+  <h1> Imobiliária</h1>
+  <div>
+    <a [routerLink] = "['/client', 'list']"> Clientes </a>
+  </div>
+  <div>
+    <a [routerLink] = "['/user', 'list']"> Usuários </a>
+  </div>
+  <div>
+    <a [routerLink] = "['/property', 'list']"> Imóveis </a>
+  </div>
+  <div>
+    <a [routerLink] = "['/agreement', 'list']"> Contratos </a>
+  </div>
+</div>
 
 <router-outlet></router-outlet>
