--- a/src/app/client/list-client/list-client.component.html
+++ b/src/app/client/list-client/list-client.component.html
@@ -22,3 +22,13 @@
   </table>
   
   <a [routerLink]="['/client', 'register']">New Client</a>
+
+  <nav aria-label="Page navigation example">
+    <ul class="pagination pg-blue">
+      <li class="page-item"><a class="page-link">Previous</a></li>
+      <li class="page-item"><a class="page-link">1</a></li>
+      <li class="page-item"><a class="page-link">2</a></li>
+      <li class="page-item"><a class="page-link">3</a></li>
+      <li class="page-item"><a class="page-link">Next</a></li>
+    </ul>
+  </nav>
