Header feito, falta tela home.. ID do forms adicionado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1> Imobiliária</h1>
-  <div>
-    <a [routerLink] = "['/client', 'list']"> Clientes </a>
-  </div>
-  <div>
-    <a [routerLink] = "['/user', 'list']"> Usuários </a>
-  </div>
-  <div>
-    <a [routerLink] = "['/property', 'list']"> Imóveis </a>
-  </div>
-  <div>
-    <a [routerLink] = "['/agreement', 'list']"> Contratos </a>
-  </div>
-</div>
+<app-menu></app-menu>
 
 <router-outlet></router-outlet>
