--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,15 @@
-<p>menu works!</p>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
+        <mdb-navbar-brand>
+            <a class="navbar-brand" href="#">Imobiliaria do Hugo</a>
+        </mdb-navbar-brand>
+        <links>
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link active waves-light" href="#" mdbWavesEffect>Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active waves-light" [routerLink] = "['/client', 'list']" mdbWavesEffect>Clientes</a>
+                <a class="nav-item nav-link active waves-light" [routerLink] = "['/user', 'list']" mdbWavesEffect>Usuários</a>
+                <a class="nav-item nav-link active waves-light" [routerLink] = "['/property', 'list']" mdbWavesEffects>Imóveis</a>
+                <a class="nav-item nav-link active waves-light" [routerLink] = "['/agreement', 'list']" mdbWavesEffect>Contratos</a>
+
+            </div>
+        </links>
+    </mdb-navbar>
