--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
+<mdb-navbar class ="margin" SideClass="navbar navbar-expand-lg navbar-dark info-color-dark fixed-top">
         <mdb-navbar-brand>
             <a class="navbar-brand" href="#">Imobiliaria do Hugo</a>
         </mdb-navbar-brand>
@@ -13,3 +13,4 @@
             </div>
         </links>
     </mdb-navbar>
+
